# TIN_generator

./: .gitignore  CMakeLists.txt  Dokumentacja.docx  README.md
src_client/: CMakeLists.txt  Client.cpp  Client.h  UDPClient.cpp  UDPClient.h  main.cpp  mainClient.cpp
src_server/: CMakeLists.txt  Server.cpp  Server.h  UDPServer.cpp  mainServer.cpp
